--- a/scripts/namspaces-access-control.yaml
+++ b/scripts/namspaces-access-control.yaml
@@ -15,10 +15,10 @@ kind: ServiceAccount
 metadata:
   name: default
 secrets:
-  - name: registry-credentials
+  - name: image-secret
   - name: git-auth
 imagePullSecrets:
-  - name: registry-credentials
+  - name: image-secret
   - name: tap-registry
 
 ---
@@ -66,7 +66,7 @@ rules:
 - apiGroups: [services.apps.tanzu.vmware.com]
   resources: ['resourceclaims']
   verbs: ['*']
-- apiGroups: [scst-scan.apps.tanzu.vmware.com]
+- apiGroups: [scanning.apps.tanzu.vmware.com]
   resources: ['imagescans', 'sourcescans']
   verbs: ['*']
 
